Please list items to be added to the final release comment here

New Features

Upgrades, Improvements and Bugfixes

Removals, Deprecations, Breaking Changes