@@ -692,11 +692,18 @@ sub process_templates {
 
     my %template_vars = (
         'ISSUER' => $issuer_info,
+        # TODO - deprecate the old structure
         'CAALIAS' => {
             'ALIAS' => $self->{CA},
             'GROUP' => $group,
             'GENERATION' => $generation,
         },
+        # We use the same template for key name generation but do not
+        # have the CAALIAS prefix there. To make the consistent we add
+        # this also on top level now and deprecate the old format
+        'ALIAS' => $self->{CA},
+        'GROUP' => $group,
+        'GENERATION' => $generation,
         'PKI_REALM' => CTX('api2')->get_pki_realm(),
     );
     ##! 32: ' Template Vars ' . Dumper ( %template_vars )
